# light-sequence-studio

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  main.cpp
src/ui/: mainwindow.cpp  mainwindow.h
